# klaussy-agents

./: .gitignore  .gitleaks.toml  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: gitleaks.yml  release.yml
examples/: README.md
examples/fastapi/: AGENTS.md  CLAUDE.md  CONVENTIONS.md  opencode.json
examples/fastapi/.claude/: directory-map.md
examples/fastapi/.claude/hooks/: git_commit_guard.py  plan_guidance.py  self_review_guard.py
examples/fastapi/.claude/rules/: fastapi.md  scripts.md  tests.md
examples/fastapi/.clinerules/: fastapi.md  scripts.md  tests.md
examples/fastapi/.clinerules/hooks/: PostToolUse  UserPromptSubmit  klaussy_comment_guard.py
examples/fastapi/.codex/: config.toml  hooks.json
examples/fastapi/.cursor/: hooks.json
examples/fastapi/.gemini/: settings.json
examples/fastapi/.github/: copilot-instructions.md
examples/fastapi/fastapi/: AGENTS.md  GEMINI.md
examples/fastapi/scripts/: GEMINI.md
examples/fastapi/tests/: GEMINI.md
examples/httpx/: .aider.conf.yml  .clineignore  AGENTS.md  CLAUDE.md  CONVENTIONS.md
examples/httpx/.agents/: settings.json
examples/httpx/.claude/: directory-map.md  settings.json
examples/httpx/.clinerules/: conventions.md  httpx.md  tests.md
examples/httpx/.codex/: hooks.json
examples/httpx/.cursor/: hooks.json  permissions.json
examples/httpx/.gemini/: settings.json
examples/httpx/httpx/: GEMINI.md
skills/klausify-init/: SKILL.md
skills/klaussy-init/: SKILL.md
skills/klaussy-update/: SKILL.md
src/klausify/: __init__.py  checklist.py  cli.py  gitignore.py  hooks.py  humanize.py  mcp_server.py  skills.py
src/klausify/agents/: __init__.py  backends.py  base.py  emit.py  hooks.py  render.py
src/klaussy/: __init__.py  _hooklauncher.py  checklist.py  claude_md.py  cli.py  comment_lint.py  github.py  gitignore.py  hooks.py  humanize.py  import_lint.py  mcp_server.py  review_prep.py  secret_scan.py  session.py  settings.py  skills.py  toolkit.py
src/klaussy/agents/: __init__.py  backends.py  base.py  emit.py  hooks.py  render.py
src/klaussy/templates/: pre_plan_guidance.md
tests/: conftest.py  test_aider.py  test_antigravity.py  test_checklist_scoping.py  test_cli.py  test_cline.py  test_comment_guard.py  test_comment_lint.py  test_commit_guard_scoping.py  test_commit_guard_usage_exit.py  test_commit_scope.py  test_cross_platform.py  test_dependency_guard.py  test_humanize_eval.py  test_humanize_openers.py  test_humanize_praise.py  test_import_lint.py  test_mcp.py  test_opencode.py  test_research_fixes.py  test_review_prep.py  test_secret_scan.py  test_self_review_guard.py  test_session.py  test_templates_pass_own_gates.py  test_toolkit.py
tests/e2e/: e2e_harness.py  test_debug_e2e.py  test_fix_e2e.py  test_test_e2e.py
tests/evals/: harness.py  test_commit_eval.py  test_explain_eval.py  test_fix_eval.py  test_humanize_eval.py  test_multistep_eval.py  test_pr_eval.py  test_review_eval.py  test_security_audit_eval.py  test_test_eval.py
(+285 files in other folders)
