[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "klaussy-agents"
version = "0.11.0"
description = "Multi-agent repo boilerplate generator — scaffolds conventions, repo-namespaced skills, settings, and hooks for Claude Code, Gemini CLI, Cursor, Codex, Copilot, Google Antigravity, Cline, and Aider (Ollama)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Stephanie Dover" }]
keywords = ["claude", "claude-code", "gemini", "cursor", "codex", "copilot", "agent-skills", "boilerplate", "conventions", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "klaussy-repo-conventions>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/steph-dove/klaussy-agents"
Repository = "https://github.com/steph-dove/klaussy-agents"
Issues = "https://github.com/steph-dove/klaussy-agents/issues"

[project.scripts]
klaussy = "klaussy.cli:main"
klaussy-mcp = "klaussy.mcp_server:main"

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0.0"]
dev = ["pytest>=7.0", "ruff>=0.4.0", "mcp[cli]>=1.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
klaussy = ["templates/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
